@@ -1,3 +1,8 @@
+2010-07-15 [ticho]	0.27.0cvs6
+
+	* src/parsers.c
+		Require mandatory Atom entry elements, discard an entry otherwise.
+
 2010-07-15 [ticho]	0.27.0cvs5
 
 	* src/strreplace.c
